--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,17 @@
-<div class="container mt-5">
-  <div class="title-avatar text-center my-5" style="font-size:50px;"><i class="fas fa-walking"></i></div>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-4 text-secondary text-center" style="font-size:100px;">
+      <i class="fas fa-walking"></i>
+    </div>
+    <div class="col-8">
+      <form action='/' method="POST">
+        <h4 class="mb-3"> Account Login</h4>
+        <div class="form w-75">
+          <input type="text" class="form-control mb-1" placeholder="Enter Your Email here ..." name="email">
+          <input type="password" class="form-control mb-3" placeholder="Password ...." name="password">
+          <button type="submit" class="btn btn-secondary">LOGIN</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
