feat: post login function

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,8 +7,9 @@
       <form action='/' method="POST">
         <h4 class="mb-3"> Account Login</h4>
         <div class="form w-75">
-          <input type="text" class="form-control mb-1" placeholder="Enter Your Email here ..." name="email">
-          <input type="password" class="form-control mb-3" placeholder="Password ...." name="password">
+          <input type="text" class="form-control mb-1" placeholder="Email ..." name="email" value="{{email}}">
+          <input type="password" class="form-control mb-3" placeholder="Password ..." name="password"
+            value="{{password}}">
           <button type="submit" class="btn btn-secondary">LOGIN</button>
         </div>
       </form>
