feat home.hbs, GET /logout

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,4 @@
-<h1> welcome back ,{{name}} !!</h1>
+<div class="container text-center">
+  <h1> welcome back ,{{name}} !!</h1>
+  <a class="btn btn-info mt-5" href="/logout">LOG OUT</a>
+</div>
